--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-12  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
+
+	* gcc 2.95 fix
+	
 2002-06-04  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
 
 	* Committing to GNUstep CVS repository in dev-apps.
