Display, compare fixuups
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@17156 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-07-05  Benhur Stein <benhur@inf.ufsm.br>
+
+	* DiffMiddleView.m (tile): Set needs display.
+	(drawRect:): Use a bluish color for the foreground.
+	* DiffScroller.m (drawRect:): Idem.
+	* DiffTextView.m (computeLineRangesFromUpTo:): Avoid an empty range. 
+	* DiffView.m: Display fixups.
+
 2003-07-05  Philippe C.D. Robert <probert@siggraph.org>
 
         * Replacing all #import directives with #include directives
