* AppController.m ([AppController -compareFileToCVS:sender]): Get the path to the cvs executable. * DiffView.m ([DiffView -tile]): ceilf->ceil * DiffWindowController.m (-initWithFilename:andTempFilename:): Switch filenames so CVS version is on the left.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@21308 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-06-13  Adam Fedor  <fedor@gnu.org>
+
+	* AppController.m ([AppController -compareFileToCVS:sender]): 
+	Get the path to the cvs executable.
+	* DiffView.m ([DiffView -tile]): ceilf->ceil	
+	* DiffWindowController.m (-initWithFilename:andTempFilename:):
+	Switch filenames so CVS version is on the left.
+
 2003-07-05  Benhur Stein <benhur@inf.ufsm.br>
 
 	* DiffMiddleView.m (tile): Set needs display.
