--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-15  Nicola Pero  <nicola.pero@meta-innovation.com>
+
+	* GNUmakefile: Removed GNUSTEP_INSTALLATION_DIR.
+
 2005-06-13  Adam Fedor  <fedor@gnu.org>
 
 	* AppController.m ([AppController -compareFileToCVS:sender]): 
