warning fixes, implement preferences for CVS path
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@27868 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-02-15  Riccardo Mottola  <rmottola@users.sf.net>
+
+	* GNUmakefile,
+	AppController.m, AppController.h,
+	EasyDiffInfo.plist,
+	gorm files:
+	Warning fixes, implement preferences for CVS executable path and
+	removed wizardry relying on internal Bundle methods
+
 2006-11-15  Nicola Pero  <nicola.pero@meta-innovation.com>
 
 	* GNUmakefile: Removed GNUSTEP_INSTALLATION_DIR.
