--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-02-15  Riccardo Mottola  <rmottola@users.sf.net>
 
+	* AppController.m: do not call openPanel twice
+
+2008-02-15  Riccardo Mottola  <rmottola@users.sf.net>
+
 	* GNUmakefile,
 	AppController.m, AppController.h,
 	EasyDiffInfo.plist,
