--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-09 Adam Fedor  <fedor@gnu.org>
+
+	* Version 0.4.0
+
 2008-02-15  Riccardo Mottola  <rmottola@users.sf.net>
 
 	* AppController.m: do not call openPanel twice
