Use -setTitle: to set NSButtonCell titles in EasyDiff.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@32519 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* DiffMiddleView.m (-setLeftChanged:andRightChanges:):
+	Use -setTitle: to set NSButtonCell titles.
+
+2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* AppController.m (-compareFilesToCVS:):
 	* DiffMiddleView.m (-dealloc):
 	* DiffTextView.m (-setLineRanges:):
