Upgrade EasyDiff project and support files to latest PC version.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@32523 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* EasyDiff.pcproj:
+	* PC.project:
+	* GNUmakefile:
+	* GNUmakefile.preamble:
+	* EasyDiffInfo.plist:
+	Upgrade project and support files to latest PC version.
+
+2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* DiffMiddleView.m (-setLeftChanged:andRightChanges:):
 	Use -setTitle: to set NSButtonCell titles.
 
