Present a dialog upon selecting the Compare Files menu command in EasyDiff, where the user can choose the files to compare.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@32524 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,24 @@
 2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* AppController.h:
+	* AppController.m:
+	* DiffFileChooser.h:
+	* DiffFileChooser.m:
+	* FileIconView.h:
+	* FileIconView.m:
+	* Resources/main.gorm:
+	* EasyDiff.pcproj/PC.project:
+	* GNUmakefile:
+	Present a dialog upon selecting the Compare Files menu command
+	where the user can choose the files to compare.
+
+	* AUTHORS:
+	* EasyDiff.pcproc/PC.project:
+	* EasyDiffInfo.plist:
+	Update list of authors.
+
+2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* EasyDiff.pcproj:
 	* PC.project:
 	* GNUmakefile:
