Rearrange EasyDiff's main menu, add standard edit menu items, add a Services menu, and make text in diff windows selectable.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@32525 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* Resources/main.gorm: Rearrange main menu, add standard edit menu
+	items, and add Services menu.
+
+	* DiffTextView.m (-initWithFrame:): Make view selectable.
+
+2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* AppController.h:
 	* AppController.m:
 	* DiffFileChooser.h:
