Expose openFiles delegate and if two filenames are supplied,  automatically open the file chooser with the filenames set.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@35354 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2012-08-06 Riccardo Mottola <rm@gnu.org>
+
+	* DiffFileChooser.h
+	* DiffFileChooser.m
+	Setters for left and right filenames.
+
+	* AppController.h
+	* Resources/main.gorm
+	* AppController.m
+	Expose openFiles delegate and if two filenames are supplied,
+	automatically open the file chooser with the filenames set.
+
 2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Resources/main.gorm: Rearrange main menu, add standard edit menu
