use extern instead of APPKIT_EXPORT
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@35381 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-08 Riccardo Mottola <rm@gnu.org>
+
+	* FileIconView.h:
+	use extern instead of APPKIT_EXPORT
+	
 2012-08-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 
 	* DiffWrapper.m
