rewrite the code to work with multi-char line endings
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@35396 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-10 Riccardo Mottola <rm@gnu.org>
+
+	* DiffWrapper.m:
+	Rewrite code to work with multi-char line endings.
+
 2012-08-09 Riccardo Mottola <rm@gnu.org>
 
 	* DiffWrapper.m:
