Fix off by one error when creating left and right patch files in EasyDiff
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@35842 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* DiffWindowController.m (_patchMutableString:): Fix off by one
+	errors.
+	* DiffWrapper.m (initWithFilename:andFilename:): Fix
+	initialization of line range arrays.
+
+2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* AppController.h:
 	* AppController.m:
 	* DiffWindowController.m:
