replace GS memory macros with standard code
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@35849 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2012-12-05 Riccardo Mottola <rm@gnu.org>
 
 	* DiffWrapper.m
+	* DiffWindowController.m
 	Replace GS memory macros with standard code.
 
 2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
