Replace GS memory macros with standard code.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@35850 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* DiffWrapper.m
 	* DiffWindowController.m
+	* DiffMiddleView.m
 	Replace GS memory macros with standard code.
 
 2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
