Replace GS memory macros with standard code.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@35853 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* DiffWrapper.m
 	* DiffWindowController.m
 	* DiffMiddleView.m
+	* AppController.m
+	* DiffWrapper.m
 	Replace GS memory macros with standard code.
 
 2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
