Transform tasktest into a method and use variables for binary paths.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/easydiff/trunk@35869 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-10 Riccardo Mottola <rm@gnu.org>
+
+	* DiffWrapper.h
+	* DiffWrapper.m
+        Transform tasktest into a method and use variables for binary paths.
+
 2012-12-05 Riccardo Mottola <rm@gnu.org>
 
 	* DiffWrapper.m
