--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-12-10 Riccardo Mottola <rm@gnu.org>
 
+	* DiffTextView.m
+        Use proper accessors and not private ivars.
+
+2012-12-10 Riccardo Mottola <rm@gnu.org>
+
 	* DiffWrapper.h
 	* DiffWrapper.m
         Transform tasktest into a method and use variables for binary paths.
